--- a/_posts/2022-08-20-OTHER.md
+++ b/_posts/2022-08-20-OTHER.md
@@ -9,13 +9,15 @@ comments: false
 math: true
 mermaid: true
 pin: false
-post-image: https://www.coupederobotique.fr/wp-content/uploads/Karibous-interview-001-compressor-800x450.jpg
+post-image: ../assets/img/posts/2019_cdr.jpg
 image:
-  path: https://www.coupederobotique.fr/wp-content/uploads/Karibous-interview-001-compressor-800x450.jpg
+  path: ../assets/img/posts/2019_cdr.jpg
   width: 1000   # in pixels
   height: 400   # in pixels
   alt: image alternative text
 ---
+
+assets\img\posts\2019_cdr.jpg
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est magna, mollis eu egestas auctor, rhoncus vitae risus. Donec bibendum eros malesuada nisl sodales fermentum. Nam sed neque volutpat, bibendum ipsum id, facilisis nisl. Quisque vitae libero in dolor rhoncus ornare. Pellentesque id pellentesque neque. Phasellus mi sem, efficitur sit amet libero sed, semper ullamcorper dui. Proin ac arcu rutrum, aliquet mauris sit amet, vulputate urna. Nam a tempus lacus. Mauris eu mauris ut est suscipit pharetra. Aenean laoreet nibh sit amet mauris posuere tempor. Aliquam id aliquam turpis, id porta massa. Integer sed quam id leo semper dignissim sodales pulvinar nisl. Praesent finibus scelerisque arcu, vitae faucibus erat auctor id. Quisque sagittis nisl ut urna finibus suscipit. In finibus nisi quis metus mollis, eu sodales felis accumsan. Donec consequat eleifend enim id laoreet.
 
