--- a/_posts/2022-08-21-NEW.md
+++ b/_posts/2022-08-21-NEW.md
@@ -17,4 +17,10 @@ image:
   alt: image alternative text
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur est magna, mollis eu egestas auctor, rhoncus vitae risus. Donec bibendum eros malesuada nisl sodales fermentum. Nam sed neque volutpat, bibendum ipsum id, facilisis nisl. Quisque vitae libero in dolor rhoncus ornare. Pellentesque id pellentesque neque. Phasellus mi sem, efficitur sit amet libero sed, semper ullamcorper dui. Proin ac arcu rutrum, aliquet mauris sit amet, vulputate urna. Nam a tempus lacus. Mauris eu mauris ut est suscipit pharetra. Aenean laoreet nibh sit amet mauris posuere tempor. Aliquam id aliquam turpis, id porta massa. Integer sed quam id leo semper dignissim sodales pulvinar nisl. Praesent finibus scelerisque arcu, vitae faucibus erat auctor id. Quisque sagittis nisl ut urna finibus suscipit. In finibus nisi quis metus mollis, eu sodales felis accumsan. Donec consequat eleifend enim id laoreet.
+Il est là ! Le nouveau site des Karibous ! 
+
+Il en fallu du temps pour que nous puissions enfin changer de support et progrssivement abandonner notre precedent site tournant sur base "Google-site". Notre transition sur du tout Open-source ces dernières années y est également pour quelque chose.
+
+Mais ne soyons pas médisant de notre précédent site. Il nous a rendu de fier service et restera en service le temps que la nouvelle version prenne le relais et intègre l'ensemble des informations nécéssaire à une diffusion plus grande.
+
+Je vous invite donc à venir jetter un coup d'oeil de temps en temps ici afin d'y observer les changements et de découvrir les nouvelles news du blog de l'équipe.
