--- a/_posts/2022-08-26-PCB.md
+++ b/_posts/2022-08-26-PCB.md
@@ -1,18 +1,48 @@
 ---
 title: Les PCB 2023 sont là !
 date: 2022-08-26 20:00:00 +0800
-categories: [Electornique]
+categories: [Electronique]
 tags: [aisler,pcb]     # TAG names should always be lowercase
 author: Barbatronic
+img_path: ../../assets/img/posts/
 toc: true
 comments: false
 math: true
 mermaid: true
 pin: false
-post-image: ../assets/img/posts/2022-08-26-PCB/IMG_20220828_182031.jpg
+post-image: assets/img/posts/2022-08-26-PCB/IMG_20220828_182031.jpg
 image:
-  path: ../assets/img/posts/2022-08-26-PCB/IMG_20220828_182031.jpg
+  path: 2022-08-26-PCB/IMG_20220828_182031.jpg
   width: 1000   # in pixels
   height: 400   # in pixels
   alt: image alternative text
 ---
+
+## PCB by Aisler
+
+Nos premières cartes électroniques sont arrivées ! Un grand merci à l'entreprise [Aisler](https://aisler.net/) de nous sponsoriser cette année en nous permettant de réaliser nos cartes pour la coupe de France de robotique !
+
+![](2022-08-26-PCB/2022-08-30-23-49-46.png)
+
+[Aisler](https://aisler.net/) est une entreprise Allemande de création de PCB sur mesure. En plus de fournir un resultat ultra-pro sur ses productions, les PCB sont très abordables et la société apporte un grand soutient à l'opens-source nottamment via son appui au logiciel [KiCad](https://www.kicad.org/).
+
+Et si vous doutiez de la qualité, regardez juste les détails de ce silkscreen ! Nous avions réalisé ce design [en live il y a quelques semaines](https://www.youtube.com/watch?v=scWNs5sUONg) et l'une des inconnues était justement la précision possible de ce type de graphique. Je penses que nous avons maintenant la réponse ;)
+
+![](2022-08-26-PCB/2022-08-30-23-54-12.png)
+
+## Les circuits de base des robots
+
+Les cartes commandées sont les principales cartes nous permettant de piloter nos robots. On y retrouve :
+- La carte principale (regroupant toutes les fonctionnalités de base)
+- La carte de gestion du LiDar
+- Une carte de déport d'IHM
+
+Comme d'habitude, vosu pouvez retrouver toutes les sources des cartes [sur notre repo GitHub](https://github.com/LesKaribous/Karibous-2023-Hardware) de l'année en cours.
+
+La quasi totalité de ces cartes ayant été réalisées et explicitées en live, je vous renvois également à nos [rediffusions de live](https://www.youtube.com/watch?v=LA_O_PqnMds&list=PLXPKPMciRsL9Ocql1KjuFHGFdYjhHsgYa) si le process vous interesse.
+
+![](2022-08-26-PCB/2022-08-31-00-01-42.png)
+
+A noter que cette année, nous avons tenté de synthétiser le maximum de fonctionnalités sur la carte principale. En résulte une grosse densité de connecteurs et de composants sur le PCB mais qui devrait également nous permettre de gagner de la place dans nos robots. L'intégration d'un écran TFT directement sur la carte principale devrait également corriger les soucis liées à notre IHM de 2022. 
+
+La soudure des cartes devrait se faire dans le prochain live de dimanche 28 Aout à 21h sur [notre chaine Twitch](https://www.twitch.tv/barbatroniclive).
