--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -9,7 +9,7 @@ rank: 0
 github: https://github.com/LesKaribous/Karibous-2023-Hardware
 youtube: 
 img: 2023_cdr.png
-description: Deux robots holonomes quasiment identiques et équipés des bras à ventouses afin de réaliser un maximum d'actions. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel. 
+description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel.
 specifications: 
 ---
 
@@ -18,21 +18,84 @@ model-viewer {
   width: 100%;
   height: 600px;
 }
+
+.progress-bar.hide {
+  visibility: hidden;
+  transition: visibility 0.3s ease 0s;
+}
+
+.progress-bar {
+  display: block;
+  width: 33%;
+  height: 10%;
+  max-height: 2%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0px);
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 10px 3px, rgba(0, 0, 0, 0.6) 0px 0px 5px 1px;
+  border: 1px solid rgba(255, 255, 255, 0.9);
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.update-bar {
+  background-color: rgba(255, 255, 255, 0.9);
+  width: 0%;
+  height: 100%;
+  border-radius: 25px;
+  float: left;
+  transition: width 0.3s ease 0s;
+}
+
+.HotspotAnnotation {
+  background: rgb(255, 255, 255);
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 4px;
+  color: rgba(0, 0, 0, 0.8);
+  display: block;
+  font-family: Futura, Helvetica Neue, sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  left: calc(100% + 1em);
+  max-width: 128px;
+  overflow-wrap: break-word;
+  padding: 0.5em 1em;
+  position: absolute;
+  top: 50%;
+  width: max-content;
+}
+.Hotspot > * {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.Hotspot[slot="hotspot-hide"]{
+    --min-hotspot-opacity: 0;
+  }
+
+.Hotspot {
+  background: rgb(255, 255, 255);
+  border-radius: 32px;
+  border: 0px none;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 4px;
+  box-sizing: border-box;
+  cursor: pointer;
+  height: 24px;
+  padding: 8px;
+  position: relative;
+  transition: opacity 0.6s ease 0s;
+  width: 24px;
+}
 </style>
 
 <model-viewer src="2023_CDR/robots_2023-Mary.gltf" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" exposure="0.68">
-    <button class="Hotspot" slot="hotspot-1" data-position="-0.14993344215155244m 0.03107697765793943m -0.0018828936264373777m" data-normal="0.19611613147848533m 0m -0.98058067642286m" data-visibility-attribute="visible">
+    <button class="Hotspot" slot="hotspot-hide" data-position="-0.14993344215155244m 0.03107697765793943m -0.0018828936264373777m" data-normal="0.19611613147848533m 0m -0.98058067642286m" data-visibility-attribute="visible">
         <div class="HotspotAnnotation">soft gripper
         </div>
     </button>
     <div class="progress-bar hide" slot="progress-bar">
         <div class="update-bar"></div>
-    </div>
-    <button slot="ar-button" id="ar-button">
-        View in your space
-    </button>
-    <div id="ar-prompt">
-        <img src="https://modelviewer.dev/shared-assets/icons/hand.png">
     </div>
 </model-viewer>
 
