--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -8,20 +8,8 @@ competition : Coupe de Robotique
 rank: 0
 github: https://github.com/LesKaribous/Karibous-2023-Hardware
 youtube: 
+doc-link: ../pages/2023/robot
 img: 2023_cdr.png
 description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel.
 specifications: 
 ---
-
-![](2022-12-27-22-11-54.png)
-
-<model-viewer src="robots_2023-Mary.gltf" ar ar-modes="scene-viewer webxr quick-look" camera-controls poster="poster.webp" shadow-intensity="1" exposure="0.68">
-    <button class="Hotspot" slot="hotspot-hide" data-position="-0.14993344215155244m 0.03107697765793943m -0.0018828936264373777m" data-normal="0.19611613147848533m 0m -0.98058067642286m" data-visibility-attribute="visible">
-        <div class="HotspotAnnotation">soft gripper
-        </div>
-    </button>
-    <div class="progress-bar hide" slot="progress-bar">
-        <div class="update-bar"></div>
-    </div>
-</model-viewer>
-
