update robots and sponsors

--- a/_robots/2019_CDR.md
+++ b/_robots/2019_CDR.md
@@ -4,11 +4,13 @@ title: Les Jumeaux Chimistes
 panel: false
 date: 2019-01-01 00:00:00 +0800
 year: 2019
-competition : Coupe de Robotique
-rank: 25
 github: https://github.com/LesKaribous/Karibous-2019
 youtube: https://youtu.be/Gv6lAeZBJQE
 img: 2019_cdr.jpg
 description: Les deux robots créés sont quasiment identiques (code, structure, électronique, etc... ). Seul les actionneurs sont spécialisés et permettent des les différencier. Ainsi, le développement a été accéléré et les bases sont utilisables directement pour les années suivantes.
 specifications: 
+competitions:
+  - event: "Coupe de Robotique"
+    rank: 25
+    prize: ""
 ---
