--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -4,12 +4,17 @@ title: Mary and Dary
 panel: false
 date: 2022-01-01 00:00:00 +0800
 year: 2023
-competition : Coupe de Robotique
-rank: 0
 github: https://github.com/LesKaribous/Karibous-2023-Hardware
 youtube: 
 doc-link: ../pages/2023/robot
-img: 2023_cdr.png
+img: 2023_cdr.jpg
 description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel.
 specifications: 
+competitions:
+  - event: "Coupe de Robotique"
+    rank: 22
+    prize: ""
+  - event: "Coupe de Belgique"
+    rank: 3
+    prize: "Prix de la communication"
 ---
