--- a/_robots/2022_CDR.md
+++ b/_robots/2022_CDR.md
@@ -4,11 +4,14 @@ title: Les Jumeaux Archéologues
 panel: false
 date: 2022-01-01 00:00:00 +0800
 year: 2022
-competition : Coupe de Robotique
-rank: 25
+rank: 27
 github: https://github.com/LesKaribous/Karibous-2022-Hardware
 youtube: https://www.youtube.com/watch?v=PZI9h9SHZHQ
 img: 2022_cdr.jpg
 description: Deux robots holonomes quasiment identiques et équipés des bras à ventouses afin de réaliser un maximum d'actions. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel. 
 specifications: 
+competitions:
+  - event: "Coupe de Robotique"
+    rank: 27
+    prize: ""
 ---
