refactor robot page

--- a/_robots/2019_CDR.md
+++ b/_robots/2019_CDR.md
@@ -1,7 +1,8 @@
 ---
-layout: page
+layout: robot
 title: Les Jumeaux Chimistes
 panel: false
+toc: false
 date: 2019-01-01 00:00:00 +0800
 year: 2019
 github: https://github.com/LesKaribous/Karibous-2019
