--- a/_robots/2021_CDR.md
+++ b/_robots/2021_CDR.md
@@ -1,7 +1,8 @@
 ---
-layout: page
+layout: robot
 title: Les Navigateurs
 panel: false
+toc: false
 date: 2021-01-01 00:00:00 +0800
 year: 2021
 github: https://github.com/LesKaribous/Karibous-2021
