--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -1,13 +1,16 @@
 ---
-layout: page
+layout: robot
 title: Mary and Dary
 panel: false
+toc: false
 date: 2022-01-01 00:00:00 +0800
 year: 2023
 github: https://github.com/LesKaribous/Karibous-2023-Hardware
-youtube: 
-doc-link: ../pages/2023/robot
+youtube: https://www.youtube.com/watch?v=-e_zRItAMJg
+rules: /assets/pdf/Eurobot2023_Rules_FR_FINALE.pdf
 img: 2023_cdr.jpg
+carrousel: cdr-2023
+nbimg-carrousel : 30
 description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel.
 specifications: 
 competitions:
@@ -17,4 +20,19 @@ competitions:
   - event: "Coupe de Belgique"
     rank: 3
     prize: "Prix de la communication"
+documentations:
+  - name: Base du robot
+    image: /assets/img/robots/2019_makerfight.jpg
+    description: Documentation de la base principale du robot
+    doc_link: /link/to/doc
+  - name: Motorisation
+    image: /assets/img/robots/2019_makerfight.jpg
+    description: Documentation de la motorisation du robot
+    doc_link: /link/to/doc
+  - name: Mat de balise
+    image: /assets/img/robots/2019_makerfight.jpg
+    description: Documentation du mat de balise permettant de detecter l'adversaire
+    doc_link: /link/to/doc
 ---
+
+
