--- a/_robots/2022_CDR.md
+++ b/_robots/2022_CDR.md
@@ -1,7 +1,8 @@
 ---
-layout: page
+layout: robot
 title: Les Jumeaux Archéologues
 panel: false
+toc: false
 date: 2022-01-01 00:00:00 +0800
 year: 2022
 rank: 27
