fix broken links

--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -24,15 +24,15 @@ documentations:
   - name: Base du robot
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la base principale du robot
-    doc_link: /link/to/doc
+    doc_link: 
   - name: Motorisation
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la motorisation du robot
-    doc_link: /link/to/doc
+    doc_link: 
   - name: Mat de balise
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation du mat de balise permettant de detecter l'adversaire
-    doc_link: /link/to/doc
+    doc_link: 
 ---
 
 
