refactor with medi instead of card

--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -21,6 +21,10 @@ competitions:
     rank: 3
     prize: "Prix de la communication"
 documentations:
+  - name: Matchs de la coupe de France de Robotique
+    image: /assets/img/robots/2019_makerfight.jpg
+    description: Résumé des matchs de la coupe de France de robotique
+    doc_link: /pages/2023/CDR_matchs/
   - name: Base du robot
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la base principale du robot
@@ -34,5 +38,7 @@ documentations:
     description: Documentation du mat de balise permettant de detecter l'adversaire
     doc_link: 
 ---
+
+
 
 
