change pages by post

--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -22,9 +22,9 @@ competitions:
     prize: "Prix de la communication"
 documentations:
   - name: Matchs de la coupe de France de Robotique
-    image: /assets/img/robots/2019_makerfight.jpg
+    image: /assets/img/carrousel/cdr-2023/4.jpg
     description: Résumé des matchs de la coupe de France de robotique
-    doc_link: /pages/2023/CDR_matchs/
+    doc_link: /posts/matchs-2023
   - name: Base du robot
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la base principale du robot
@@ -38,7 +38,5 @@ documentations:
     description: Documentation du mat de balise permettant de detecter l'adversaire
     doc_link: 
 ---
-
-
 
 
