update blog posts

--- a/_posts/2023-08-01-matchs-2023.md
+++ b/_posts/2023-08-01-matchs-2023.md
@@ -1,7 +1,7 @@
 ---
 title: Les matchs de la Coupe de Robotique 2023
 date: 2023-08-01 10:00:00 +0800
-categories: [Electroniqu]
+categories: [cdr 2023]
 tags: [cdr 2023]     # TAG names should always be lowercase
 author: Barbatronic
 img_path: ../../assets/img/2023/CDR_matchs/
