--- a/_posts/2022-08-26-PCB.md
+++ b/_posts/2022-08-26-PCB.md
@@ -10,7 +10,7 @@ comments: false
 math: true
 mermaid: true
 pin: false
-post-image: assets/img/posts/2022-08-26-PCB/IMG_20220828_182031.jpg
+post-image: ../../../assets/img/posts/2022-08-26-PCB/IMG_20220828_182031.jpg
 image:
   path: 2022-08-26-PCB/IMG_20220828_182031.jpg
   width: 1000   # in pixels
