--- a/_posts/2022-08-29-SOUDURE.md
+++ b/_posts/2022-08-29-SOUDURE.md
@@ -10,7 +10,7 @@ comments: false
 math: true
 mermaid: true
 pin: false
-post-image: assets/img/posts/2022-08-29-SOUDURE/2022-08-31-00-14-26.png
+post-image: ../../../assets/img/posts/2022-08-29-SOUDURE/2022-08-31-00-14-26.png
 image:
   path: 2022-08-29-SOUDURE/2022-08-31-00-14-26.png
   width: 1000   # in pixels
