--- a/_posts/2023-03-22-rs.md
+++ b/_posts/2023-03-22-rs.md
@@ -3,7 +3,7 @@ layout: post
 title: Remerciements à RS pour leur soutien renouvellé
 date: 2023-03-22 10:00:00 +0800
 author: Barbatronic
-post-image: ../../../assets/img/posts/opera_BZvksXkhCv.png
+post-image: /assets/img/posts/opera_BZvksXkhCv.png
 categories: [cdr 2023]
 tags: [cdr 2023, partenaires, RS]
 toc: false
