--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -28,7 +28,7 @@ documentations:
   - name: Base du robot
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la base principale du robot
-    doc_link: 
+    doc_link: /pages/2023/robot-base
   - name: Motorisation
     image: /assets/img/robots/2019_makerfight.jpg
     description: Documentation de la motorisation du robot
