update images and title

--- a/_posts/2023-05-16-bricovis.md
+++ b/_posts/2023-05-16-bricovis.md
@@ -3,7 +3,7 @@ layout: post
 title: Remerciements à Bricovis pour leur soutien continu
 date: 2023-05-16 10:00:00 +0800
 author: Barbatronic
-post-image: /assets/img/posts/bricovis.png
+post-image: /assets/img/posts/bricovis-partenaire.jpg
 categories: [cdr 2023]
 tags: [cdr 2023, partenaires, bricovis]
 toc: false
