update content and fix typo

--- a/_posts/2023-08-17-saison-2022-23-en.md
+++ b/_posts/2023-08-17-saison-2022-23-en.md
@@ -49,6 +49,12 @@ We're eagerly awaiting the new regulations in September and getting back to work
 
 Our appearance on the [Scope](https://leskaribous.fr/news/scope-arte) show was a highlight of the year. It was a fantastic platform to share our passion and discuss current robotics trends.
 
+Our appearance on the Arte show **Scope** was a highlight of the year. It provided a fantastic platform to share our passion and discuss current trends in robotics.
+
+Hosted by the talented Valentine Delattre and Marie Treibert, the show delved into the impact of robots on our daily lives and the transformations they bring to our society. During the episode, Pierre Girard introduced various teams and exhibitors from the RoboCup, providing insights into the latest innovations among the teams.
+
+You can find the full [article here.](https://leskaribous.fr/posts/scope-arte/)
+
 ![](2023-08-17-00-56-14.png)
 
 ## **Live with Barbatronic:**
