--- a/_posts/2023-08-17-saison-2022-23-fr.md
+++ b/_posts/2023-08-17-saison-2022-23-fr.md
@@ -21,7 +21,7 @@ Nos robots ont connu des évolutions notables cette année. Les deux robots holo
 
 De plus, une partie significative de notre travail a été consacrée au développement du code et de l'architecture logicielle, accessible sur notre [github](https://github.com/LesKaribous).
 
-Cela a donc été une année charnière pour nous ! En travaillant sur la seconde version de nos robots développés l'année précédente, nosu avons pu mettre en avant les forces mais aussi les faiblesses d'un tel design. Le travail continu cette été afin d'avoir un robot opérationnel pour la rentrée !
+Cela a donc été une année charnière pour nous ! En travaillant sur la seconde version de nos robots développés l'année précédente, nous avons pu mettre en avant les forces mais aussi les faiblesses d'un tel design. Le travail continu cette été afin d'avoir un robot opérationnel pour la rentrée !
 
 ![](2023-08-17-00-37-34.png)
 
@@ -47,7 +47,11 @@ Nous sommes très impatients de découvrir le nouveau règlement en septembre et
 
 ## **L'émission Scope :**
 
-Notre apparition dans l'émission [Scope](https://leskaribous.fr/news/scope-arte) a été un moment fort de l'année. C'était une plateforme fantastique pour partager notre passion et discuter des tendances actuelles en robotique.
+Notre apparition dans l'émission d'Arte **Scope** a été un moment fort de l'année. C'était une plateforme fantastique pour partager notre passion et discuter des tendances actuelles en robotique.
+
+Animée par les talentueuses Valentine Delattre et Marie Treibert, l'émission a exploré l'impact des robots dans notre vie quotidienne et les transformations qu'ils apportent à notre société. Au cours de l'émission, Pierre Girard a présenté différentes équipes et exposants de la RoboCup, offrant un aperçu des innovations les plus récentes chez les équipes.
+
+Vous retrouverez l'ensemble de [l'article ici.](https://leskaribous.fr/posts/scope-arte/)
 
 ![](2023-08-17-00-56-14.png)
 
