update and refactor doc

--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -22,21 +22,11 @@ competitions:
     prize: "Prix de la communication"
 documentations:
   - name: Matchs de la coupe de France de Robotique
-    image: /assets/img/carrousel/cdr-2023/4.jpg
+    image: /assets/img/2023/4-16-9.jpg
     description: Résumé des matchs de la coupe de France de robotique
     doc_link: /posts/matchs-2023
-  - name: Base du robot
-    image: /assets/img/robots/2019_makerfight.jpg
-    description: Documentation de la base principale du robot
-    doc_link: /pages/2023/robot-base
-  - name: Motorisation
-    image: /assets/img/robots/2019_makerfight.jpg
-    description: Documentation de la motorisation du robot
-    doc_link: 
-  - name: Mat de balise
-    image: /assets/img/robots/2019_makerfight.jpg
-    description: Documentation du mat de balise permettant de detecter l'adversaire
-    doc_link: 
+  - name: Visite 3D du robot
+    image: /assets/img/2023/tile-presentation.jpg
+    description: Documentation détaillée avec vues 3D interactives du robot
+    doc_link: /pages/2023/robot
 ---
-
-
