refactor docs folders and generation

--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -28,5 +28,5 @@ documentations:
   - name: Visite 3D du robot
     image: /assets/img/2023/tile-presentation.jpg
     description: Documentation détaillée avec vues 3D interactives du robot
-    doc_link: /pages/2023/robot
+    doc_link: /docs/2023/robot
 ---
