--- a/_robots/2023_CDR.md
+++ b/_robots/2023_CDR.md
@@ -11,7 +11,7 @@ rules: /assets/pdf/Eurobot2023_Rules_FR_FINALE.pdf
 img: 2023_cdr.jpg
 carrousel: cdr-2023
 nbimg-carrousel : 30
-description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et materiel.
+description: Deux robots holonomes quasiment identiques. Le code est partagé entre les deux robots ainsi que l'ensemble de l'architecture software et matériel.
 specifications: 
 competitions:
   - event: "Coupe de Robotique"
