--- a/_robots/2021_CDR.md
+++ b/_robots/2021_CDR.md
@@ -8,7 +8,7 @@ year: 2021
 github: https://github.com/LesKaribous/Karibous-2021
 youtube: https://www.youtube.com/watch?v=jo57NmS31dE
 img: 2021_cdr.jpg
-description: Cette année, nous avons testé la propulsion holonomique cette année. Ceci nous a permis de tester ce nouveau mode de déplacement et de nous permettre d'accéder à la 11 ème place. Nous avon ré-adapté le robot de l'année précédente tout en modifiant drastiquement le fonctionnement du code et l'architecture logicielle. Celle-ci pourra être portée sur les robots 2022.
+description: Cette année, L'un de nos robots est holonome. Ceci nous a permis de tester ce nouveau mode de déplacement et de nous permettre d'accéder à la 11 ème place. Nous avons ré-adapté le robot de l'année précédente tout en modifiant drastiquement le fonctionnement du code et l'architecture logicielle. Celle-ci pourra être portée sur les robots 2022.
 specifications: 
 competitions:
   - event: "Coupe de Robotique"
