--- a/_robots/2024_CDR.md
+++ b/_robots/2024_CDR.md
@@ -7,7 +7,7 @@ date: 2023-09-01 00:00:00 +0800
 year: 2024
 github: https://github.com/LesKaribous/Karibous-2024-Hardware
 youtube: 
-rules: /assets/pdf/Eurobot2024_Rules_FR_FINALE.pdf
+rules:
 img: 2024_cdr.png
 description: Un robot holonome sur une architecture similaire à celle des trois dernières années. Il est capable de ramasser et trier les éléments de jeu.
 specifications: 
