--- a/_robots/2024_CDR.md
+++ b/_robots/2024_CDR.md
@@ -18,4 +18,10 @@ competitions:
   - event: "Coupe de Belgique"
     rank: 0
     prize: ""
+documentations:
+  - name: Documentation du robot
+    image: /assets/img/2023/tile-presentation.jpg
+    description: Documentation détaillée du robot
+    doc_link: /docs/2024/robot
 ---
+
