--- a/_posts/2024-04-22-belgique-2024.md
+++ b/_posts/2024-04-22-belgique-2024.md
@@ -10,7 +10,7 @@ comments: false
 math: true
 mermaid: true
 pin: false
-post-image: assets/img/gallery/belgique-2024/55.JPG
+post-image: assets/img/gallery/belgique-2024/55.jpg
 ---
 
 # Les séries de matchs
