--- a/_posts/2024-04-22-belgique-2024.md
+++ b/_posts/2024-04-22-belgique-2024.md
@@ -23,6 +23,8 @@ Voici les moments forts de nos matchs au SparkOH! dont nous terminerons 2ème de
 
 ![](../../assets/img/gallery/belgique-2024/55.jpg)
 
+Un grand merci à tout [nos sponsors](https://leskaribous.fr/sponsors/) : YDlidar, Debamax, RS, 3DJake, Bricovis, GoTronic, MakerBeam, Filimprimante3D et RobotMaker !
+
 # Les séries de matchs
 
 {% include match_display.html 
