--- a/_posts/2024-04-22-belgique-2024.md
+++ b/_posts/2024-04-22-belgique-2024.md
@@ -33,7 +33,7 @@ video_id="dZQNOWvnzO8"
 start=0
 opponent1="Les Karibous" 
 score1=56
-opponent2="" 
+opponent2="UCLouvain - Bot Attacks" 
 score2=1 
 points="pas de détail"
 details1="0"
@@ -60,7 +60,7 @@ start=0
 opponent1="Les Karibous" 
 score1=65
 opponent2="Electrons Libres" 
-score2=1
+score2=14
 points="pas de détail"
 details1="0"
 details2="0"
