--- a/_robots/2024_CDR.md
+++ b/_robots/2024_CDR.md
@@ -1,6 +1,6 @@
 ---
 layout: robot
-title: Main robot
+title: Le Jardinier
 panel: false
 toc: false
 date: 2023-09-01 00:00:00 +0800
@@ -9,14 +9,14 @@ github: https://github.com/LesKaribous/Karibous-2024-Hardware
 youtube: 
 rules:
 img: 2024_cdr.png
-description: Un robot holonome sur une architecture similaire à celle des trois dernières années. Il est capable de ramasser et trier les éléments de jeu.
+description: Un robot holonome sur une architecture similaire à celle des trois dernières années. Il est capable de ramasser les éléments de jeu et de faire tourner les panneaux solaires.
 specifications: 
 competitions:
   - event: "Coupe de Robotique"
-    rank: 0
-    prize: ""
+    rank: 5
+    prize: "9ème général"
   - event: "Coupe de Belgique"
-    rank: 0
+    rank: 2
     prize: ""
 documentations:
   - name: Documentation du robot
