--- a/_robots/2025_CDR.md
+++ b/_robots/2025_CDR.md
@@ -23,5 +23,14 @@ documentations:
     image: /assets/img/2023/tile-presentation.jpg
     description: Des liens, idées et reflexions sur la création du robot 2025
     doc_link: /docs/2025/visionBoard
+  - name: Présentation du robot
+    image: /assets/img/2023/tile-presentation.jpg
+    description: Présentation du foncitonnement de notre robot 2025
+    doc_link: /docs/2025/robot
+  - name: Cartes electroniques
+    image: /assets/img/2023/tile-presentation.jpg
+    description: Les cartes electroniques du robot 2025
+    doc_link: /docs/2025/pcb
+
 ---
 
