--- a/_robots/2025_CDR.md
+++ b/_robots/2025_CDR.md
@@ -25,11 +25,11 @@ documentations:
     doc_link: /docs/2025/visionBoard
   - name: Présentation du robot
     image: /assets/img/2023/tile-presentation.jpg
-    description: Présentation du foncitonnement de notre robot 2025
+    description: Présentation du fonctionnement de notre robot 2025
     doc_link: /docs/2025/robot
-  - name: Cartes electroniques
+  - name: Cartes électroniques
     image: /assets/img/2023/tile-presentation.jpg
-    description: Les cartes electroniques du robot 2025
+    description: Les cartes électroniques du robot 2025
     doc_link: /docs/2025/pcb
 
 ---
