--- a/_robots/2025_CDR.md
+++ b/_robots/2025_CDR.md
@@ -1,6 +1,6 @@
 ---
 layout: robot
-title: Le Chanteur (Provisoire)
+title: Le Technicien de scène
 panel: false
 toc: false
 date: 2024-05-12 00:00:00 +0800
