change image format

--- a/_galleries/cdr-2025.md
+++ b/_galleries/cdr-2025.md
@@ -7,5 +7,5 @@ description: Coupe de France de robotique organisée par Planète Science.
 folder: cdr-2025
 external_link: https://photos.app.goo.gl/fXcvv3KpAhwASY4u6
 nb-img: 1
-card-img: 1.png
+card-img: 1.jpg
 ---
