--- a/_robots/2025_CDR.md
+++ b/_robots/2025_CDR.md
@@ -13,10 +13,10 @@ description: Un robot holonome à priori... Work in Progress
 specifications: 
 competitions:
   - event: "Coupe de Robotique"
-    rank: 0
-    prize: ""
+    rank: 2
+    prize: "15ème général"
   - event: "Coupe de Belgique"
-    rank: 0
+    rank: 2
     prize: ""
 documentations:
   - name: Reflexion et idées 2025
